--- a/Documentos/UTFPR/Semestre 4/LPOO/PF/Projeto Final/SistemaVenda/pom.xml
+++ b/Documentos/UTFPR/Semestre 4/LPOO/PF/Projeto Final/SistemaVenda/pom.xml
@@ -3,16 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>View</groupId>
     <artifactId>SistemaVenda</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
     <packaging>jar</packaging>
-    
-    <repositories>
-        <repository>
-            <id>unknown-jars-temp-repo</id>
-            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
-            <url>file:${project.basedir}/lib</url>
-        </repository>
-    </repositories>
     
     <dependencies>
         
@@ -21,13 +13,7 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.3.1.Final</version>
         </dependency>
-        
-        <dependency>
-            <groupId>unknown.binary</groupId>
-            <artifactId>hibernate-jpamodelgen-4.3.1.Final</artifactId>
-            <version>SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
+
         
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
